添加自动关闭

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         $('#video_type').on('change', function() {
             var val = $(this).val()
-            if(val === '0') { // 直播
+            if(val === 'broadcast') { // 直播
                 $('.broadcast').show()
                 $('.playback').hide()
             } else { // 回放
