--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     <label>自动停止</label>
                     <div class="select">
                         <select class="form-control" id='autoClose'>
-                            <option value="0">从不</option>
-                            <option value="1">5分钟</option>
-                            <option value="2">10分钟</option>
-                            <option value="3">30分钟</option>
-                            <option value="4">60分钟</option>
+                            <option value=0 >从不</option>
+                            <option value=5 >5分钟</option>
+                            <option value=10 >10分钟</option>
+                            <option value=30 >30分钟</option>
+                            <option value=60 >60分钟</option>
                         </select>
                     </div>
                 </div>
@@ -121,6 +121,8 @@
         
         $('#autoClose').on('change', function() {
             var val = $(this).val()
+
+            aidrivingPlayer.updateAutoCloseTime(val ? +val : 0)
         })
 
         $('#establish_connection').click(function() {
@@ -151,15 +153,12 @@
         })
 
         $('#play').click(function() {
-            console.log('播放')
             var simNo = $('#sim_number').val()
-            // var passagewayNumber = $('#passageway_number').val()
             var startTime = $('#start_time').val()
             var endTime = $('#end_time').val()
 
             aidrivingPlayer.playAll({
                 simNo: simNo,
-                // passagewayNumber: passagewayNumber,
                 startTime: startTime,
                 endTime: endTime,
             })
@@ -167,7 +166,7 @@
 
         $('#stop').click(function() {
             console.log('暂停')
-            aidrivingPlayer.stopAll()
+            aidrivingPlayer.destroyAll()
         })
 
 
