--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                 </div>
                 <div class="cols">
                     <label>SIM卡号</label>
-                    <input id='sim_number' value="18912342233"/>
+                    <input id='sim_number' value="40027111687"/>
+                </div>
+                <div class="cols playback" style="display: none;">
+                    <label>通道号</label>
+                    <input id='channelId'/>
                 </div>
                 <div class="cols playback" style="display: none;">
                     <label>开始时间</label>
@@ -92,6 +96,7 @@
     <script src="./js/zui.min.js"></script>
     <script src="./js/flv.min.js"></script>
     <script src="./js/aidriving_video.js"></script>
+    <script src="./js/video.js"></script>
     <script>
         
 
