处理延迟；处理请求参数错误问题

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="rows">
                 <div class="cols">
                     <label>资源URL地址</label>
-                    <input id='url'/>
+                    <input id='url' value="http://smartsafety.aidriving.com"/>
                 </div>
                 <div class="cols">
                     <label>客户秘钥</label>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="cols">
                     <label>SIM卡号</label>
-                    <input id='sim_number'/>
+                    <input id='sim_number' value="13699999997"/>
                 </div>
                 <div class="cols playback" style="display: none;">
                     <label>通道号</label>
