--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="./js/zui.min.js"></script>
     <script src="./js/flv.min.js"></script>
     <script src="./js/aidriving_video.js"></script>
-    <script src="./js/video.js"></script>
+    <!-- <script src="./js/video.js"></script> -->
     <script>
         
 
