去掉部分默认值

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="rows">
                 <div class="cols">
                     <label>资源URL地址</label>
-                    <input id='url' value="http://smartsafety.aidriving.com"/>
+                    <input id='url'/>
                 </div>
                 <div class="cols">
                     <label>客户秘钥</label>
